Feature: CBS - handle alert recommendation (ALFA-53)
Feature: CBS - handle alert recommendation (ALFA-53)

Reviewed-by: Sławomir Korbas <skorbas@silenteight.com>
Reviewed-by: Szymon Mrozowski <smrozowski@silenteight.com>
Merged from: https://gitlab.silenteight.com/sens/scb-bridge/-/merge_requests/46